<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kvannli.simonkvannli.dailybudget.MainActivity">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:fontFamily="sans-serif"
    android:textStyle="bold"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_horizontal"
        android:layout_weight=".35"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/todays_budget_header"
            android:id="@+id/textView3"
            android:layout_gravity="center_vertical"
            android:textSize="23dp"


            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/todays_budget_placeholder_text"
        android:id="@+id/current_money"
        android:textSize="50dp"
        android:focusableInTouchMode="false"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".25"

        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:background="@color/lightBlue"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/daily_amount_text"
            android:id="@+id/textView2"
            android:textSize="15dp"
            android:autoText="false"
            android:layout_gravity="center_vertical"

            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/white"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/daily_amount_placeholder_text"
            android:id="@+id/daily_amount"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"

            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/white"

            />
    </LinearLayout>

    <!--
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".20"
        android:gravity="bottom"
        >
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:ems="6"
            android:id="@+id/editCurrentValue"
            android:textSize="25dp"
            android:inputType="numberDecimal"
            android:layout_gravity="bottom"
            android:maxLength="10"
            android:background="@color/darkBlue"


            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/white" />

    </LinearLayout>
    -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".25"
        android:gravity="bottom"
        >

        <ImageButton
            android:id="@+id/imageButton2"
            android:src="@drawable/plusbutton"
            android:scaleType="fitCenter"
            android:background="@null"
            android:onClick="addMoney"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:layout_width="108dp"
            android:layout_height="120dp" />
        <ImageButton
            android:id="@+id/imageButton"
            android:src="@drawable/minusbutton"
            android:onClick="subtractMoney"

            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_marginLeft="50dp"

            android:layout_marginBottom="10dp"
            android:layout_width="108dp"
            android:layout_height="120dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".15"
        android:gravity="bottom"
        >
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_gravity="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
    </LinearLayout>


</LinearLayout>
    <fragment
        android:id="@+id/navigation_drawer"
        android:name="com.kvannli.simonkvannli.dailybudget.NavigationDrawerFragment"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        tools:layout="@layout/drawer_main2"
        />


</android.support.v4.widget.DrawerLayout>